# my-ai-notes

./: .gitignore  README.md
my-ai-notes-backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
my-ai-notes-backend/app/: app_lifespan.py  main.py
my-ai-notes-backend/app/api/v1/: router.py
my-ai-notes-backend/app/api/v1/auth/: auth_controller.py  auth_router.py
my-ai-notes-backend/app/api/v1/examples/: examples_controller.py  examples_router.py
my-ai-notes-backend/app/api/v1/notes/: notes_controller.py  notes_router.py
my-ai-notes-backend/app/core/: __init__.py  security.py  services_initializer.py
my-ai-notes-backend/app/dependencies/: auth_dependency.py
my-ai-notes-backend/app/repos/v1/auth/: __init__.py
my-ai-notes-backend/app/repos/v1/auth/data/: token_blacklist_datasource.py
my-ai-notes-backend/app/repos/v1/examples/: __init__.py  examples_repository.py
my-ai-notes-backend/app/repos/v1/examples/data/: examples_datasource.py
my-ai-notes-backend/app/repos/v1/examples/models/: example_model.py
my-ai-notes-backend/app/repos/v1/notes/: __init__.py  notes_repository.py
my-ai-notes-backend/app/repos/v1/notes/data/: notes_datasource.py
my-ai-notes-backend/app/repos/v1/notes/models/: note_model.py
my-ai-notes-backend/app/repos/v1/users/: __init__.py  users_repository.py
my-ai-notes-backend/app/responses/v1/: __init__.py  list_response.py
my-ai-notes-backend/app/services/: mongo_service.py
my-ai-notes-backend/app/tools/: __init__.py  time_tools.py
my-ai-notes-backend/test/: __init__.py  test_demo.py
(+45 files in other folders)
