[project]
name = "my-ai-notes"
version = "0.1.1"
description = "This is a simple project for my full-stack skills"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "motor>=3.7.1",
    "orjson>=3.10.15",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.1",
    "python-jose[cryptography]>=3.5.0",
]

[dependency-groups]
dev = [
    "onion",
    "pytest-asyncio>=0.25.3",
    "pytest>=8.3.5",
    "ruff>=0.9.10",
]

[tool.uv.sources]
onion = { git = "https://github.com/NathanDraco22/onion-cli.git" }
